--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About me</h2>
                 <p>I am a junior at the University of Pennsylvania studying both computer science and political science. My coursework ranges from data structures and algorithms to the study of human rights around the globe. <p>Outside of class, I raise funds and run operations for <a href="http://www.pennappsfellows.com/">PennApps Fellows</a> and act as project manager for <a href="https://fling.seas.upenn.edu/~electric/dynamic/">Penn Electric Racing</a>.</p> 
-                <p>Currently looking for internship opportunities in the Philadelphia area or elsewhere for Summer 2016.</p>
+                <p>Currently looking for internship opportunities for Summer 2016.</p>
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact me!</h2>
-                <p>If you have any questions, or would like to talk, reach out.</p>
+                <p>If you have any questions, or would like to talk, reach out!</p>
                 <p><a href="mailto:sparmett@sas.upenn.edu">sparmett@sas.upenn.edu</a> | | <a href="mailto:sam.parmett@gmail.com">sam.parmett@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
