Update junior -> senior

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<!-- <aside>Junior at the University of Pennsylvania</aside> -->
 		</header>
-		<h3><em>Junior at the University of Pennsylvania</em></h3>
+		<h3><em>Senior at the University of Pennsylvania</em></h3>
 		<p><strong><em>Double-major in computer & political science</em></strong></p>
 		<p>Interested in exploring the connection between daily life and efficient software.
 			My coursework ranges from data structures and algorithms to the study of human rights around the globe.</p>
