--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 			<!-- <aside>Junior at the University of Pennsylvania</aside> -->
 		</header>
 		<h3><em>Senior at the University of Pennsylvania</em></h3>
-		<p><strong><em>Double-major in computer & political science</em></strong></p>
+		<p><strong><em>Double major in computer & political science</em></strong></p>
 		<p>Interested in exploring the connection between daily life and efficient software.
 			My coursework ranges from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Incoming SDE intern @ <em><strong>Amazon, AWS S3 team</strong> (Summer 2016)</em></li>
+			<li>Software Development Engineer Intern @ <em><strong>Amazon, AWS S3 team</strong> (Summer 2016)</em></li>
 			<li>Technical Strategy Analyst @ <em><strong>Applecart</strong> (Summer - Winter 2015)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring 2016)</em></li>
 			<li>Member of <em><strong>Penn Electric Racing</em></strong> and former organizer of <em><strong>PennApps Fellows</em></strong></li>
