Update with Guru + S3 FT

--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
 
 		  ga('create', 'UA-60156216-1', 'auto');
 		  ga('send', 'pageview');
-
 		</script>
 	</head>
 	<body>
 		<header>
 			<h1>Sam Parmett</h1> 
-
-			<!-- <aside>Junior at the University of Pennsylvania</aside> -->
 		</header>
 		<h3><em>Senior at the University of Pennsylvania</em></h3>
 		<p><strong><em>Double major in computer & political science</em></strong></p>
@@ -46,9 +43,11 @@
 			My coursework ranges from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Software Development Engineer Intern @ <em><strong>Amazon, AWS S3 team</strong> (Summer 2016)</em></li>
+			<li>Incoming Software Development Engineer @ <em><strong>Amazon, AWS S3 Web Server</strong> (Summer 2017)</em></li>
+			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
+			<li>Software Development Engineer Intern @ <em><strong>Amazon, AWS S3 Replication</strong> (Summer 2016)</em></li>
+			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
 			<li>Technical Strategy Analyst @ <em><strong>Applecart</strong> (Summer - Winter 2015)</em></li>
-			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring 2016)</em></li>
 			<li>Member of <em><strong>Penn Electric Racing</em></strong> and former organizer of <em><strong>PennApps Fellows</em></strong></li>
 		</ul>
 		<hr>
