Rewording some of experience

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			My coursework ranges from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Incoming Software Development Engineer @ <em><strong>Amazon, AWS S3 Web Server</strong> (Summer 2017)</em></li>
+			<li>Incoming Software Development Engineer @ <em><strong>Amazon Web Services, S3 Web Server</strong> (Summer 2017)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
-			<li>Software Development Engineer Intern @ <em><strong>Amazon, AWS S3 Replication</strong> (Summer 2016)</em></li>
+			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
 			<li>Technical Strategy Analyst @ <em><strong>Applecart</strong> (Summer - Winter 2015)</em></li>
 			<li>Member of <em><strong>Penn Electric Racing</em></strong> and former organizer of <em><strong>PennApps Fellows</em></strong></li>
