Update with recent employment

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
 		<header>
 			<h1>Sam Parmett</h1> 
 		</header>
-		<h3><em>Senior at the University of Pennsylvania</em></h3>
-		<p><strong><em>Double major in computer & political science</em></strong></p>
-		<p>Interested in exploring the connection between daily life and efficient software.
-			My coursework ranges from data structures and algorithms to the study of human rights around the globe.</p>
+		<h3><em>Engineer @ AWS, &nbsp;formerly Penn '17</em></h3>
+		<p>Interested in exploring the connection between daily life and efficient software. Currently building the future of cloud storage at S3. At Penn, my courserwork ranged from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Incoming Software Development Engineer @ <em><strong>Amazon Web Services, S3 Web Server</strong> (Summer 2017)</em></li>
+			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3 Webserver</strong> (Summer 2017)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
 			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
@@ -52,7 +50,7 @@
 		</ul>
 		<hr>
 		<h2>Contact me - <em><a href="https://www.dropbox.com/s/4o4p9qrukj2iuhg/Parmett_Resume_S17.pdf?dl=0">resumé</a></h2></em>
-		<p>If you have comments & questions, or would just like to reach out, email me &ndash; <em>sam.parmett (at) gmail.com</em>.<p>
+		<p>If you have comments & questions, or would just like to reach out, email me &ndash; <em>sam.parmett (at) gmail.com</em></p>
 		<p>Inspired by the pioneers behind <a href="http://bettermotherfuckingwebsite.com/">bmfw.com</a>, <a href="https://twitter.com/drew_mc">@drew_mc</a> and <a href="https://twitter.com/gabehammersmith">@gabehammersmith</a>.</p>
 	</body>
 </html>
