Fix typo in blurb

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1>Sam Parmett</h1> 
 		</header>
 		<h3><em>Engineer @ AWS, &nbsp;formerly Penn '17</em></h3>
-		<p>Interested in exploring the connection between daily life and efficient software. Currently building the future of cloud storage at S3. At Penn, my courserwork ranged from data structures and algorithms to the study of human rights around the globe.</p>
+		<p>Interested in exploring the connection between daily life and efficient software. Currently building the future of cloud storage at S3. At Penn, my coursework ranged from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
 			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3 Webserver</strong> (Summer 2017)</em></li>
