--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<p>Interested in exploring the connection between daily life and efficient software. Currently building the future of cloud storage at S3. At Penn, my coursework ranged from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3 Webserver</strong> (Summer 2017)</em></li>
+			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3 Webserver</strong> (Summer 2017 - present)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
 			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
@@ -49,7 +49,7 @@
 			<li>Member of <em><strong>Penn Electric Racing</em></strong> and former organizer of <em><strong>PennApps Fellows</em></strong></li>
 		</ul>
 		<hr>
-		<h2>Contact me - <em><a href="https://www.dropbox.com/s/e1k2o36gbg1slef/Parmett_Resume_S19.pdf?dl=0">resumé</a></h2></em>
+		<h2>Contact me - <em><a href="https://www.dropbox.com/s/kn8tthc6cmypf0m/resume_july_19.pdf?dl=0">resumé</a></h2></em>
 		<p>If you have comments & questions, or would just like to reach out, email me &ndash; <em>sam.parmett (at) gmail.com</em></p>
 		<p>Inspired by the pioneers behind <a href="http://bettermotherfuckingwebsite.com/">bmfw.com</a>, <a href="https://twitter.com/drew_mc">@drew_mc</a> and <a href="https://twitter.com/gabehammersmith">@gabehammersmith</a>.</p>
 	</body>
