Update with new team at AWS

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 			<h1>Sam Parmett</h1> 
 		</header>
 		<h3><em>Engineer @ AWS, &nbsp;formerly Penn '17</em></h3>
-		<p>Interested in exploring the connection between daily life and efficient software. Currently building the future of cloud storage at S3. At Penn, my coursework ranged from data structures and algorithms to the study of human rights around the globe.</p>
+		<p>Interested in exploring the connection between daily life and efficient software. Currently a member of AWS Cryptography. At Penn, my coursework ranged from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Senior Software Engineer @ <em><strong>Amazon Web Services, S3</strong> (Summer 2017 - present)</em></li>
+			<li>Senior Software Engineer @ <em><strong>AWS Cryptography, PKI</strong> (Summer 2021 - present)</em></li>
+			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3</strong> (Summer 2017 - present)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
 			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
