Bound time at S3

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<h3>A brief professional summary</h3>
 		<ul>
 			<li>Senior Software Engineer @ <em><strong>AWS Cryptography, PKI</strong> (Summer 2021 - present)</em></li>
-			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3</strong> (Summer 2017 - present)</em></li>
+			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3</strong> (Summer 2017)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
 			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
 			<li>Teaching Assistant for <em><strong>CIS110: Introduction to Computer Programming</strong> (Spring - Fall 2016)</em></li>
