Update with move to AWS Identity

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		<p>Interested in exploring the connection between daily life and efficient software. Currently a member of AWS Cryptography. At Penn, my coursework ranged from data structures and algorithms to the study of human rights around the globe.</p>
 		<h3>A brief professional summary</h3>
 		<ul>
-			<li>Senior Software Engineer @ <em><strong>AWS Cryptography, PKI</strong> (Summer 2021 - present)</em></li>
+			<li>Senior Software Engineer @ <em><strong>AWS Identity, Automated Reasoning</strong> (Summer 2022 - present)</em></li>
+			<li>Senior Software Engineer @ <em><strong>AWS Cryptography, PKI</strong> (Summer 2021 - 2022)</em></li>
 			<li>Software Development Engineer @ <em><strong>Amazon Web Services, S3</strong> (Summer 2017 - 2021)</em></li>
 			<li>Software Engineer Intern @ <em><strong>Guru</strong> (Spring 2017)</em></li>
 			<li>Software Development Engineer Intern @ <em><strong>Amazon Web Services, S3 Replication</strong> (Summer 2016)</em></li>
